# milvus-lite-server

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api_demo.py  test_embedding_api.py  test_jwt_switch.py  test_jwt_token_only.py
.github/: FUNDING.yml
app/: main.py  test.py
app/api/: models.py
app/api/v1/: auth.py  embedding.py  vector_save.py  vector_search.py
app/core/: config.py
app/services/: auth.py  embedding.py  milvusdb.py
app/tests/: test_api.py  test_config.py  test_embedding.py  test_milvus.py
vercel/: main.py
