[project]
name = "milvus-lite-server"
version = "0.1.0"
description = "A lightweight server for Milvus vector database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pymilvus[model]>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "uvicorn[standard]>=0.35.0",
    "PyJWT>=2.8.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
